[workspace]
members = ["encrypt-config", "encrypt-config-derive", "tests", "examples"]
resolver = "2"

[workspace.package]
version = "0.5.0-alpha1"
authors = ["Louis <836250617@qq.com>"]
description = "A Rust crate to manage, persist and encrypt your configurations."
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/encrypt-config"
documentation = "https://docs.rs/encrypt-config"

[workspace.dependencies]
encrypt_config = { path = "encrypt-config", default-features = false }
encrypt_config_derive = { path = "encrypt-config-derive", default-features = false, version = "0.5.0-alpha1" }
keyring = { version = "2.3", default-features = false }
bitflags = { version = "2.6.0" }

[profile.dev.package.num-bigint-dig]
opt-level = 3
