[package]
name = "encrypt_config_derive"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
features = ["full"]

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
serde = { version = "1" }
encrypt_config = { workspace = true }

[build-dependencies]
rustc_version = "0.4.0"

[lib]
proc-macro = true

[features]
default = []
full = ["persist", "secret"]
persist = []
secret = []
default_config_dir = []
