[package]
name = "encrypt_config"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
snafu = { version = "0.7.5" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
erased-serde = "0.4.5"
rsa = { version = "0.9.6", features = ["serde"], optional = true }
keyring = { version = "2.1.0", optional = true }
rand = { version = "0.8.5", optional = true }
dirs = { version = "5.0.1", optional = true }

[build-dependencies]

[features]
default = []
full = ["persist", "secret"]
secret = ["dep:rsa", "dep:rand", "dep:keyring", "persist"]
persist = []
default_config_dir = ["dep:dirs"]
mock = []
