[package]
name = "encrypt_config"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
keywords = ["config", "encryption"]

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
encrypt_config_derive = { workspace = true, optional = true }
snafu = { version = "0.7.5" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
rsa = { version = "0.9.6", features = ["serde"], optional = true }
keyring = { version = "2.1.0", optional = true }
rand = { version = "0.8.5", optional = true }
dirs = { version = "5.0.1", optional = true }

[features]
default = ["full"]
full = ["persist", "secret", "derive"]
secret = [
    "dep:rsa",
    "dep:rand",
    "dep:keyring",
    "persist",
    "encrypt_config_derive?/secret",
]
persist = ["encrypt_config_derive?/persist"]
derive = ["dep:encrypt_config_derive"]
default_config_dir = ["dep:dirs", "encrypt_config_derive?/default_config_dir"]
mock = []
