[package]
name = "examples"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
encrypt_config = { workspace = true }
serde = "1"

[[example]]
name = "impl_normal_example"
path = "impl_normal_example.rs"
required-features = ["normal"]

[[example]]
name = "impl_persist_example"
path = "impl_persist_example.rs"
required-features = ["persist", "mock"]

[[example]]
name = "impl_secret_example"
path = "impl_secret_example.rs"
required-features = ["secret", "mock"]

[[example]]
name = "derive_normal_example"
path = "derive_normal_example.rs"
required-features = ["derive"]

[[example]]
name = "derive_persist_example"
path = "derive_persist_example.rs"
required-features = ["persist", "derive"]

[[example]]
name = "derive_secret_example"
path = "derive_secret_example.rs"
required-features = ["secret", "derive"]

[features]
default = []
normal = []
mock = ["encrypt_config/mock"]
derive = ["encrypt_config/derive"]
default_config_dir = ["encrypt_config/default_config_dir"]
persist = ["encrypt_config/persist", "normal"]
secret = ["encrypt_config/secret", "persist"]
