[package]
name = "tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
encrypt_config = { workspace = true, features = ["derive"] }
serde = "1"
const-str = "0.5.7"

[[test]]
name = "normal_test"
path = "normal_test.rs"

[[test]]
name = "persist_test"
path = "persist_test.rs"
required-features = ["persist"]

[[test]]
name = "secret_test"
path = "secret_test.rs"
required-features = ["secret", "mock"]

[features]
default = []
persist = ["encrypt_config/persist"]
secret = ["persist", "encrypt_config/secret"]
mock = ["encrypt_config/mock"]
default_config_dir = ["encrypt_config/default_config_dir"]
